# quant-reasoning-bench

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: smoke.yaml
configs/phase1/: Q4_K_M_E1.yaml  Q4_K_M_E2.yaml  Q5_K_M_E1.yaml  Q5_K_M_E2.yaml  Q8_0_E1.yaml  Q8_0_E2.yaml  fp16_E1.yaml  fp16_E2.yaml
configs/phase2/: M2-qwen3-1.7b-Q4_K_M_E1.yaml  M2-qwen3-1.7b-Q8_0_E1.yaml  M2-qwen3-1.7b-fp16_E1.yaml  M3-qwen3-0.6b-Q4_K_M_E1.yaml  M3-qwen3-0.6b-fp16_E1.yaml  cap-M1-Q4_K_M-L2048_E1.yaml  cap-M1-Q4_K_M-L4096_E1.yaml  kv-M1-Q4_K_M-kvQ4_E1.yaml  kv-M1-Q4_K_M-kvQ8_E1.yaml  kv-M1-Q4_K_M-kvfp16_E1.yaml
data/smoke/: e0_toy.jsonl
data/suite/: gsm8k_e1.jsonl  math500_e2.jsonl
docs/: METHODOLOGY.md  PUBLISH_HF.md  RESULTS_SCHEMA.md  RUN_REAL.md
src/quantthink/: cli.py  config.py  hardware.py  manifest.py  runner.py
src/quantthink/backends/: base.py  hf.py  llama_cpp.py  mock.py  openai_endpoint.py  vllm_backend.py
src/quantthink/budget/: frontier.py
src/quantthink/decoding/: sampling.py
src/quantthink/eval/: checkers.py  extractor.py  loader.py
src/quantthink/kvcache/: config.py
src/quantthink/metrics/: core.py  deltas.py  stats.py
src/quantthink/report/: leaderboard.py  pareto.py  published.py  tables.py
tests/: conftest.py  test_checkers.py  test_cli.py  test_config.py  test_deltas.py  test_extractor.py  test_frontier.py  test_loader.py  test_metrics_core.py  test_mock_backend.py  test_report.py  test_smoke_e2e.py  test_stats.py
