[project]
name = "quantthink"
version = "0.1.0"
description = "Does quantization break reasoning? A reproducible benchmark for small long-CoT models on a 4GB GPU, with a prescriptive accuracy-optimal config recommender."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
quantthink = "quantthink.cli:main"

[project.optional-dependencies]
transformers = [
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "bitsandbytes>=0.43; sys_platform == 'linux'",
]
llama-cpp = [
    "llama-cpp-python>=0.2",
    # CUDA runtime libs for systems where only the driver (not CUDA toolkit) is installed.
    # The pre-built CUDA wheel for llama-cpp-python links against libcudart.so.12 which
    # is provided here; ignored on CPU-only machines.
    "nvidia-cuda-runtime-cu12; sys_platform == 'linux'",
    "nvidia-cublas-cu12; sys_platform == 'linux'",
]
vllm = [
    "vllm>=0.4",
]
datasets = [
    "datasets>=2.0",
]
quantize = [
    # autoawq is stale (no release since 2025-05) — gptqmodel 5.0+ natively
    # supports both GPTQ and AWQ, verified current at build time (see
    # docs/RUN_REAL.md). Calibration itself runs in a separate scratch venv,
    # not this project's own — these are declared here for discoverability.
    "gptqmodel>=7.0; sys_platform == 'linux'",
    "torch; sys_platform == 'linux'",
    "transformers; sys_platform == 'linux'",
    "accelerate; sys_platform == 'linux'",
    "ninja; sys_platform == 'linux'",
]
space = [
    "gradio>=4.0",
    "plotly>=5.0",
]
all-backends = [
    "transformers>=4.40",
    "torch>=2.0",
    "datasets>=2.0",
    "llama-cpp-python>=0.2",
    "vllm>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quantthink"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pyright]
pythonVersion = "3.11"
include = ["src", "tests"]
ignore = [
    "src/quantthink/backends/hf.py",
    "src/quantthink/backends/llama_cpp.py",
    "src/quantthink/backends/vllm_backend.py",
    "src/quantthink/kvcache/config.py",
]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
markers = [
    "integration: requires optional deps or network access",
    "slow: long-running tests",
]
